WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50094
Fix typos in CSS grammar
https://bugs.webkit.org/show_bug.cgi?id=50094
Summary
Fix typos in CSS grammar
Mike Lawther
Reported
2010-11-25 15:34:16 PST
Fix typos in CSS grammar
Attachments
Patch
(3.40 KB, patch)
2010-11-25 15:36 PST
,
Mike Lawther
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Lawther
Comment 1
2010-11-25 15:36:00 PST
Created
attachment 74895
[details]
Patch
Kent Tamura
Comment 2
2010-11-25 15:45:17 PST
Comment on
attachment 74895
[details]
Patch Looks good!
WebKit Commit Bot
Comment 3
2010-11-25 16:22:55 PST
Comment on
attachment 74895
[details]
Patch Clearing flags on attachment: 74895 Committed
r72747
: <
http://trac.webkit.org/changeset/72747
>
WebKit Commit Bot
Comment 4
2010-11-25 16:23:00 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5
2010-11-25 17:04:20 PST
http://trac.webkit.org/changeset/72747
might have broken GTK Linux 64-bit Debug
noel gordon
Comment 6
2010-12-05 16:06:10 PST
ooooh that hertz
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug