2010-11-25  Mike Lawther  <mikelawther@chromium.org>

Reviewed by Kent Tamura.

        Fix typos in CSS grammar (HERZ -> HERTZ)
        https://bugs.webkit.org/show_bug.cgi?id=50094

        * css/CSSGrammar.y:
        * css/CSSParser.cpp:
        (WebCore::CSSParser::lex):
        * css/tokenizer.flex:

Canonical link: https://commits.webkit.org/63206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72747 268f45cc-cd09-0410-ab3c-d52691b4dbfc